--- a/index.html
+++ b/index.html
@@ -159,6 +159,19 @@
                                 </div>
                             </div>
                     </div>
+                    <div class="about-products">
+                        <div class="container-img">
+                            <img src="img/air-jordan_colorful.png" alt="Air Jordan Colorido">
+                        </div>
+                        <div>
+                            <div class="name-and-price">
+                                <p>Tênis Nike Air Jordan</p>
+                                <small>Casual</small>
+                                <p>R$ 950,00</p>
+                                <small>30 unidades</small>
+                            </div>
+                        </div>
+                    </div>
                     </div>
                 </section>
         </section>
